[project.optional-dependencies]
dev = [
    "pytest",
    "pylint",
]
ngsolve = [
    "ngsolve",
]
firedrake = [
    "firedrake",
]

[tool.poetry]
name = "ngsPETSc"
version = "0.0.7a5"
description = "NGSolve/Netgen interface to PETSc"
authors = [
  "Umberto Zerbinati <umberto.zerbinati@maths.ox.ac.uk>",
  "Patrick E. Farrell <patrick.farrell@maths.ox.ac.uk>",
  "Stefano Zampini <stefano.zampini@kaust.edu.sa>",
  "Jack Betteridge <J.Betteridge@imperial.ac.uk>",
]
maintainers = [
  "Umberto Zerbinati <umberto.zerbinati@maths.ox.ac.uk>",
]
readme = "README.md"
license = "MIT"
packages = [
    {include = "ngsPETSc"}
]
documentation = "https://ngspetsc.readthedocs.io/en/latest/"
repository = "https://github.com/NGSolve/ngsPETSc"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Development Status :: 3 - Alpha",
]

[tool.poetry.dependencies]
python = "^3.9"
netgen-mesher = "^6.2"
netgen-occt = "^7.8"
petsc4py =  "^3.22.1"
mpi4py = "^4"
numpy = "^2.0"
scipy = "^1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pylint = "^3.3"

[tool.poetry.group.ngsolve.dependencies]
ngsolve = "^6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
